Markup for scopus report

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="col-xxxl-9 col-xxl-8 col-lg-5 col-md-6">
     <nb-card>
-      <nb-card-header>Графік рейтингу</nb-card-header>
+      <nb-card-header>Графік рейтингу Scopus</nb-card-header>
       <nb-card-body>
         <s2m-rating-chart [users]="users">
         </s2m-rating-chart>
