--- a/src/app/pages/reports/scopus-report/scopus-report.component.html
+++ b/src/app/pages/reports/scopus-report/scopus-report.component.html
@@ -1,3 +1,31 @@
-<p>
-  scopus-report works!
-</p>
+<div class="row">
+  <div class="col-xxxl-3 col-md-6">
+    <s2m-status-card title="ПІБ" type="success">
+      <i class="nb-person"></i>
+    </s2m-status-card>
+  </div>
+
+  <div class="col-xxxl-3 col-md-6">
+    <s2m-status-card title="Цитування" type="success">
+      <i class="nb-volume-high"></i>
+    </s2m-status-card>
+  </div>
+
+  <div class="col-xxxl-3 col-md-6">
+    <s2m-status-card title="Документи" type="success">
+      <i class="nb-compose"></i>
+    </s2m-status-card>
+  </div>
+
+  <div class="col-xxxl-3 col-md-6">
+    <s2m-status-card title="Н-індекс" type="success">
+      <i class="nb-bar-chart"></i>
+    </s2m-status-card>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-xxxl-12 col-xxl-12 col-lg-12 col-md-12">
+    <s2m-scopus-statistic></s2m-scopus-statistic>
+  </div>
+</div>
