--- a/src/app/pages/reports/scopus-report/scopus-statistic/scopus-statistic.component.html
+++ b/src/app/pages/reports/scopus-report/scopus-statistic/scopus-statistic.component.html
@@ -40,7 +40,12 @@
       </div>
 
       <div>
-        <button class="btn btn-success btn-semin-round btn-demo">Зробити звіт</button>
+        <button class="btn btn-success btn-semin-round btn-demo"
+                [disabled]="inProgress"
+                [class.btn-pulse]="inProgress"
+                (click)="generatePdf()">
+          Зробити звіт
+        </button>
       </div>
 
     </div>
