changed markup for scopus report

--- a/src/app/pages/reports/scopus-report/scopus-statistic/scopus-statistic.component.html
+++ b/src/app/pages/reports/scopus-report/scopus-statistic/scopus-statistic.component.html
@@ -38,14 +38,27 @@
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="col-5">
+          <div class="dropdown" placement="top" ngbDropdown>
+            <button class="btn btn-outline-success" type="button" ngbDropdownToggle>
+              2013-2015
+            </button>
+            <ul class="dropdown-menu" ngbDropdownMenu>
+              <li class="dropdown-item">2013-2015</li>
+              <li class="dropdown-item">2016-2018</li>
+            </ul>
+          </div>
+        </div>
 
-      <div>
-        <button class="btn btn-success btn-semin-round btn-demo"
-                [disabled]="inProgress"
-                [class.btn-pulse]="inProgress"
-                (click)="generatePdf()">
-          Зробити звіт
-        </button>
+        <div class="col-5">
+          <button class="btn btn-success btn-semin-round btn-demo"
+                  [disabled]="inProgress"
+                  [class.btn-pulse]="inProgress"
+                  (click)="generatePdf()">
+            Зробити звіт
+          </button>
+        </div>
       </div>
 
     </div>
