--- a/src/app/pages/reports/scopus-report/scopus-report.component.html
+++ b/src/app/pages/reports/scopus-report/scopus-report.component.html
@@ -26,6 +26,7 @@
 
 <div class="row">
   <div class="col-xxxl-12 col-xxl-12 col-lg-12 col-md-12">
-    <s2m-scopus-statistic></s2m-scopus-statistic>
+    <s2m-scopus-statistic [reportInfo]="reportInfo">
+    </s2m-scopus-statistic>
   </div>
 </div>
