--- a/src/app/pages/reports/scopus-report/scopus-report.component.html
+++ b/src/app/pages/reports/scopus-report/scopus-report.component.html
@@ -1,37 +1,79 @@
 <div class="row">
-  <div class="col-xxxl-3 col-md-6">
-    <s2m-status-card title="ПІБ" type="success">
-      <i class="nb-person"></i>
-    </s2m-status-card>
-  </div>
-
-  <div class="col-xxxl-3 col-md-6">
-    <s2m-status-card title="Цитування" type="success">
-      <i class="nb-volume-high"></i>
-    </s2m-status-card>
-  </div>
-
-  <div class="col-xxxl-3 col-md-6">
-    <s2m-status-card title="Документи" type="success">
-      <i class="nb-compose"></i>
-    </s2m-status-card>
-  </div>
-
-  <div class="col-xxxl-3 col-md-6">
-    <s2m-status-card title="Н-індекс" type="success">
-      <i class="nb-bar-chart"></i>
-    </s2m-status-card>
-  </div>
-</div>
-
-<div class="row">
   <div class="col-xxxl-12 col-xxl-12 col-lg-12 col-md-12">
-    <s2m-scopus-statistic [reportInfo]="reportInfo"
-                          [pointsCit]="pointsCit"
-                          [pointsDoc]="pointsDoc"
-                          [countOnPage]="countOnPage"
-                          [sumCit]="sumCit"
-                          [sumDoc]="sumDoc">
-    </s2m-scopus-statistic>
+    <nb-card size="large">
+      <div class="consumption-table">
+        <div class="table-header">
+          <div>Звіт</div>
+          <div class="subtitle">Scopus</div>
+        </div>
+
+        <nb-tabset fullWidth (changeTab)="changeTab($event)">
+          <nb-tab *ngFor="let year of reportInfo.forGraph | keys | tail : initialYearsCount - 3; let i=index"
+                  [tabTitle]="year" [active]="i === 0">
+            <div class="stats-month" *ngFor="let month of reportInfo.forGraph[year] | keys">
+              <div>
+                <span class="month">{{ month | month }}</span>
+              </div>
+              <div class="results">
+                <b>{{ reportInfo.forGraph[year][month]['citationCount'] }}</b> цит. / <b>{{
+                reportInfo.forGraph[year][month]['docCount'] }}</b> док
+              </div>
+            </div>
+          </nb-tab>
+        </nb-tabset>
+      </div>
+
+      <div class="chart-container">
+        <div class="chart-header">
+          <div class="header-stats">
+            <div class="stats-block">
+              <div class="subtitle">Всього цитувань</div>
+              <div>
+                <span class="value">{{sumCit}}</span>
+                <span class="unit">цит.</span>
+              </div>
+            </div>
+
+            <div class="stats-block">
+              <div class="subtitle">Всього документів</div>
+              <div>
+                <span class="value">{{sumDoc}}</span>
+                <span class="unit">док.</span>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-5">
+              <div class="dropdown" placement="top" ngbDropdown>
+                <button class="btn btn-outline-success" type="button" ngbDropdownToggle>
+                  {{yearDropdown.selected.key}}
+                </button>
+                <ul class="dropdown-menu" ngbDropdownMenu>
+                  <li class="dropdown-item"
+                      *ngFor="let option of yearDropdown.list"
+                      (click)="chooseCount(option)">
+                    {{option.key}}
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="col-5">
+              <button class="btn btn-success btn-semin-round btn-demo"
+                      [disabled]="inProgress"
+                      [class.btn-pulse]="inProgress"
+                      (click)="generatePdf()">
+                Зробити звіт
+              </button>
+            </div>
+          </div>
+
+        </div>
+        <s2m-scopus-statistic-chart
+          [pointsDoc]="pointsDoc"
+          [pointsCit]="pointsCit">
+        </s2m-scopus-statistic-chart>
+      </div>
+    </nb-card>
   </div>
 </div>
